--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -396,6 +396,54 @@ main {
 .filter-cont .f-body .f-type_cont .f-type_active:hover {
   background-color: rgb(87, 140, 92);
 }
+.filter-cont .f-body .f-fanfiction_settings {
+  display: flex;
+  flex-direction: column;
+}
+.filter-cont .f-body .f-fanfiction_settings .ffs-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 10px 4px;
+  font-size: 1rem;
+}
+.filter-cont .f-body .f-fanfiction_settings .ffs-header input, .filter-cont .f-body .f-fanfiction_settings .ffs-header button {
+  font-size: 1.1rem;
+  margin: 0 6px 7px;
+  background-color: rgb(139, 136, 199);
+  color: #ffffff;
+  transition: background-color 0.2s;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 4px 8px;
+}
+.filter-cont .f-body .f-fanfiction_settings .ffs-header input:hover, .filter-cont .f-body .f-fanfiction_settings .ffs-header button:hover {
+  background-color: rgb(117, 113, 191);
+}
+.filter-cont .f-body .f-fanfiction_settings .ffs-header input i, .filter-cont .f-body .f-fanfiction_settings .ffs-header button i {
+  font-size: 0.9rem;
+  padding: 0 4px;
+  -webkit-text-stroke: 1px white;
+}
+.filter-cont .f-body .f-fanfiction_settings .ffs-series_include {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.filter-cont .f-body .f-fanfiction_settings .ffs-series_include span {
+  border-radius: 12px;
+  padding: 2px 8px;
+  margin: 0 3px 4px;
+  font-size: 0.9rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background-color: #985C30;
+}
+.filter-cont .f-body .f-fanfiction_settings .ffs-series_include .ffs-base_series {
+  background-color: #983030;
+}
 .filter-cont .f-body .f-options {
   display: flex;
   flex-wrap: wrap;
@@ -470,6 +518,17 @@ main {
   color: #fff;
   border-radius: 8px;
   padding: 2px 12px;
+}
+.filter-cont .f-body .f-tagsbtn_cont button {
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 8px;
+  padding: 2px 12px;
+}
+.filter-cont .f-body .f-tagsbtn_cont button i {
+  -webkit-text-stroke: 1px white;
+  padding: 0 0 0 4px;
 }
 .filter-cont .f-body .f-tagsbtn_cont .f-includetag {
   background-color: rgb(72, 139, 78);
@@ -602,28 +661,22 @@ main {
   .nav-cont {
     display: flex;
   }
-
   .post {
     background-color: #1D1D1D !important;
     border-radius: 10px;
   }
-
   .post-options {
     padding: 20px 10px 10px !important;
   }
-
   .obt-content .obt-item i {
     top: 0 !important;
   }
-
   .filter-cont {
     width: 340px;
   }
-
   .filter-tagdd {
     width: 280px;
   }
-
   .f-removetagbtn:before {
     background-color: #c08e8e !important;
   }
@@ -637,7 +690,6 @@ main {
   .orderby-value {
     display: none;
   }
-
   .po-option {
     font-size: 1.3rem !important;
   }
@@ -646,7 +698,6 @@ main {
   .orderby_type-cont {
     width: 100%;
   }
-
   .filter-cont {
     width: 100%;
   }
