fanfiction settings 3 remove crossover button

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -105,7 +105,7 @@
                     <div class="ffs-series_include">
                         <span data-fseries="overlord" class="ffs-base_series">Overlord</span>
                         <input type="hidden" name="seriesinclude" value="overlord"/>
-                        <span data-fseries="konosuba">Konosuba</span>
+                        <span data-fseries="konosuba">Konosuba<i class="bi bi-x-circle f-removeseriesbtn"></i></span>
                         <input type="hidden" name="seriesinclude" value="konosuba"/>
                     </div>
                 </div>
@@ -173,9 +173,9 @@
             -->
         </div>
         <div class="f-tagsincexc f-tags_include">
-            <!--<span data-ftag="comedy">Comedy</span>
+            <!--<span data-ftag="comedy">Comedy<i class="bi bi-x-circle f-removetagbtn"></i></span>
             <input type="hidden" name="taginclude" value="comedy" data-ftagref="comedy"/>
-            <span data-ftag="fantasy">Fantasy</span>
+            <span data-ftag="fantasy">Fantasy<i class="bi bi-x-circle f-removetagbtn"></i></span>
             <input type="hidden" name="taginclude" value="fantasy" data-ftagref="fantasy"/>
             -->
         </div>
@@ -218,6 +218,9 @@
         <li data-tagddvalue="adventure">Adventure</li>
         <li data-tagddvalue="science_fiction">Science fiction</li>
     </ul>
+</div>
+<div class="filter-addseries" id="filter-addseriesmodal">
+
 </div>
 
 <div class="nav-cont">
