--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -97,8 +97,8 @@
             else if(typeQuery == "fanfiction"){
                 <div class="f-fanfiction_settings">
                     <div class="ffs-header">
-                        <button data-button="choose_series"><i class="bi bi-search"></i> Series</button>
-                        <button data-button="add_crossover">Crossover<i class="bi bi-plus"></i></button>
+                        <button data-button="choose_series" id="fanfic-chooseseries"><i class="bi bi-search"></i> Series</button>
+                        <button data-button="add_crossover" id="fanfic-choosecrossover">Crossover<i class="bi bi-plus"></i></button>
                         <!--<input type="button" class="" value="Series" data-button="choose_series">
                         <input type="button" class="" value="Crossover +" data-button="add_crossover">-->
                     </div>
@@ -219,8 +219,63 @@
         <li data-tagddvalue="science_fiction">Science fiction</li>
     </ul>
 </div>
-<div class="filter-addseries" id="filter-addseriesmodal">
-
+<div class="filter-addseries" id="filter-addseriesmodal" data-fanficseriestype="">
+    <div class="fadds-header">
+        <input type="text" class="fadds-searchbar" id="fadds-searchbar" placeholder="Search">
+        <i class="bi bi-x-lg" id="fadds-close"></i>
+    </div>
+    <div class="fadds-dropdowns">
+        <select>
+            <option value="Type">Type</option>
+            <option value="Book">Book</option>
+            <option value="Movie">Movie</option>
+            <option value="TV Show">TV Show</option>
+            <option value="Game">Game</option>
+            <option value="Anime">Anime</option>
+            <option value="Cartoon">Cartoon</option>
+            <option value="Comic/Manga">Comic/Manga</option>
+        </select>
+        <select>
+            <option value="AZ">A-Z</option>
+            <option value="Others">Others</option>
+            <option value="A">A</option>
+            <option value="B">B</option>
+            <option value="C">C</option>
+            <option value="D">D</option>
+            <option value="E">E</option>
+            <option value="F">F</option>
+            <option value="G">G</option>
+            <option value="H">H</option>
+            <option value="I">I</option>
+            <option value="J">J</option>
+            <option value="K">K</option>
+            <option value="L">L</option>
+            <option value="M">M</option>
+            <option value="N">N</option>
+            <option value="O">O</option>
+            <option value="P">P</option>
+            <option value="Q">Q</option>
+            <option value="R">R</option>
+            <option value="S">S</option>
+            <option value="T">T</option>
+            <option value="U">U</option>
+            <option value="V">V</option>
+            <option value="W">W</option>
+            <option value="X">X</option>
+            <option value="Y">Y</option>
+            <option value="Z">Z</option>
+        </select>
+    </div>
+    <ul class="fadds-list" id="fadds-list">
+        <li data-seriesval="Overlord">Overlord</li>
+        <li data-seriesval="Harry Potter">Harry Potter</li>
+        <li data-seriesval="The Boys">The Boys</li>
+        <li data-seriesval="Stranger Things">Stranger Things</li>
+        <li data-seriesval="Breaking Bad">Breaking Bad</li>
+        <li data-seriesval="Game of Thrones">Game of Thrones</li>
+        <li data-seriesval="Hunger Games">Hunger Games</li>
+        <li data-seriesval="Pirates of the Caribbean">Pirates of the Caribbean</li>
+    </ul>
 </div>
 
 <div class="nav-cont">
