--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -445,6 +445,7 @@ main {
   font-size: 1.1rem;
   margin-left: 5px;
   cursor: pointer;
+  display: flex;
 }
 .filter-cont .f-body .f-fanfiction_settings .ffs-series_include span > i:before {
   background-color: #c08e8e;
@@ -472,6 +473,7 @@ main {
   margin: 0 5px 7px;
   border-radius: 5px;
   font-size: 1.1rem;
+  cursor: pointer;
 }
 .filter-cont .f-body .f-options .f-allow18 {
   display: flex;
@@ -670,6 +672,80 @@ main {
   background-color: #373737;
 }
 
+.filter-addseries {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  height: 400px;
+  width: 260px;
+  border-radius: 20px;
+  overflow: hidden;
+  z-index: 508;
+  background-color: #313131;
+  box-shadow: 0px 0px 6px 0px rgba(49, 49, 49, 0.3137254902);
+  padding-bottom: 10px;
+}
+.filter-addseries .fadds-header {
+  width: 100%;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+.filter-addseries .fadds-header .fadds-searchbar {
+  padding: 2px 6px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  width: 100%;
+  flex-shrink: 1;
+  border: 1px solid #ffffff;
+}
+.filter-addseries .fadds-header > i {
+  margin: 0 4px 0 20px;
+  margin-right: 4px;
+  font-size: 1.3rem;
+  flex-shrink: 0;
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.3137254902);
+  cursor: pointer;
+}
+.filter-addseries .fadds-dropdowns {
+  padding: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 10px 6px;
+}
+.filter-addseries .fadds-dropdowns > select {
+  outline: none;
+  border: none;
+  background: #4E4E4E;
+  color: #ffffff;
+  padding: 4px;
+  border-radius: 5px;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+.filter-addseries .fadds-list {
+  flex-grow: 1;
+  overflow-y: auto;
+}
+.filter-addseries .fadds-list > li {
+  width: 100%;
+  padding: 6px 20px;
+  overflow: hidden;
+  cursor: pointer;
+}
+.filter-addseries .fadds-list > li:hover {
+  background-color: #373737;
+}
+
 @media (min-width: 768px) {
   .nav-cont {
     display: flex;
@@ -689,6 +765,9 @@ main {
   }
   .filter-tagdd {
     width: 280px;
+  }
+  .filter-addseries {
+    width: 344px;
   }
   .f-removetagbtn:before {
     background-color: #c08e8e !important;
