fanfiction settings 5 spans finished

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -97,16 +97,16 @@
             else if(typeQuery == "fanfiction"){
                 <div class="f-fanfiction_settings">
                     <div class="ffs-header">
-                        <button data-button="choose_series" id="fanfic-chooseseries"><i class="bi bi-search"></i> Series</button>
-                        <button data-button="add_crossover" id="fanfic-choosecrossover">Crossover<i class="bi bi-plus"></i></button>
-                        <!--<input type="button" class="" value="Series" data-button="choose_series">
+                        <button data-button="choose_series" id="fanfic-chooseseries"><i class="bi bi-search"></i> Series <i class="bi bi-plus"></i></button>
+                        <!--<button data-button="add_crossover" id="fanfic-choosecrossover">Crossover<i class="bi bi-plus"></i></button>
+                        <input type="button" class="" value="Series" data-button="choose_series">
                         <input type="button" class="" value="Crossover +" data-button="add_crossover">-->
                     </div>
                     <div class="ffs-series_include">
-                        <span data-fseries="overlord" class="ffs-base_series">Overlord</span>
-                        <input type="hidden" name="seriesinclude" value="overlord"/>
+                        <!--
                         <span data-fseries="konosuba">Konosuba<i class="bi bi-x-circle f-removeseriesbtn"></i></span>
                         <input type="hidden" name="seriesinclude" value="konosuba"/>
+                        -->
                     </div>
                 </div>
             }
@@ -219,7 +219,7 @@
         <li data-tagddvalue="science_fiction">Science fiction</li>
     </ul>
 </div>
-<div class="filter-addseries" id="filter-addseriesmodal" data-fanficseriestype="">
+<div class="filter-addseries" id="filter-addseriesmodal">
     <div class="fadds-header">
         <input type="text" class="fadds-searchbar" id="fadds-searchbar" placeholder="Search">
         <i class="bi bi-x-lg" id="fadds-close"></i>
@@ -268,13 +268,13 @@
     </div>
     <ul class="fadds-list" id="fadds-list">
         <li data-seriesval="Overlord">Overlord</li>
-        <li data-seriesval="Harry Potter">Harry Potter</li>
-        <li data-seriesval="The Boys">The Boys</li>
-        <li data-seriesval="Stranger Things">Stranger Things</li>
-        <li data-seriesval="Breaking Bad">Breaking Bad</li>
-        <li data-seriesval="Game of Thrones">Game of Thrones</li>
-        <li data-seriesval="Hunger Games">Hunger Games</li>
-        <li data-seriesval="Pirates of the Caribbean">Pirates of the Caribbean</li>
+        <li data-seriesval="Harry_Potter">Harry Potter</li>
+        <li data-seriesval="The_Boys">The Boys</li>
+        <li data-seriesval="Stranger_Things">Stranger Things</li>
+        <li data-seriesval="Breaking_Bad">Breaking Bad</li>
+        <li data-seriesval="Game_of_Thrones">Game of Thrones</li>
+        <li data-seriesval="Hunger_Games">Hunger Games</li>
+        <li data-seriesval="Pirates_of_the_Caribbean">Pirates of the Caribbean</li>
     </ul>
 </div>
 
