--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -409,10 +409,10 @@ main{
             flex-direction: column;
             .ffs-header{
                 display: flex;
-                justify-content: space-between;
+                justify-content: center;
                 padding: 2px 10px 4px;
                 font-size: 1rem;
-                input, button{
+                button{
                     font-size: 1.1rem;
                     margin: 0 6px 7px;
                     background-color: rgb(139, 136, 199);
@@ -461,9 +461,6 @@ main{
                             background-color: #be2424 !important;
                         }
                     }
-                }
-                .ffs-base_series{
-                    background-color: #983030;
                 }
             }
         }
