there was 2 tag list, made it 1

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -198,17 +198,7 @@
         <input type="text" class="taggdd-searchbar" id="taggdd-searchbar" placeholder="Search tag">
         <i class="bi bi-x-lg" id="f-taggdd-close"></i>
     </div>
-    <ul class="" id="f-tagdd-include">
-        <li data-tagddvalue="action">Action</li>
-        <li data-tagddvalue="comedy">Comedy</li>
-        <li data-tagddvalue="fantasy">Fantasy</li>
-        <li data-tagddvalue="romance">Romance</li>
-        <li data-tagddvalue="dram">Dram</li>
-        <li data-tagddvalue="horror">Horror</li>
-        <li data-tagddvalue="adventure">Adventure</li>
-        <li data-tagddvalue="science_fiction">Science fiction</li>
-    </ul>
-    <ul class="" id="f-tagdd-exclude">
+    <ul class="" id="f-tagdd-list" data-action="include">
         <li data-tagddvalue="action">Action</li>
         <li data-tagddvalue="comedy">Comedy</li>
         <li data-tagddvalue="fantasy">Fantasy</li>
