--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                 <i class="bi bi-list"></i>
             </div>
             <div class="logo-cont">
-                <span>OmneFictio</span>
+                <span><a asp-controller="Home" asp-action="Index">OmneFictio</a></span>
             </div>
             <div class="searchbar-cont">
                 <div class="searchbar-wrap">
