--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -11,18 +11,18 @@
     <div class="linkgroup_cont readingtime">
         <span>Reading Time</span>
         <div class="linkgroup">
-            <div class="link_cont">
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="original">
                 <i class="bi bi-book-half"></i>
                 <span>Original</span>
-            </div>
-            <div class="link_cont">
+            </a>
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="fanfiction">
                 <i class="bi bi-book"></i>
                 <span>Fanfiction</span>
-            </div>
-            <div class="link_cont">
+            </a>
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="plot">
                 <i class="bi bi-card-text"></i>
                 <span>Plot</span>
-            </div>
+            </a>
         </div>
     </div>
     <div class="linkgroup_cont aboutyou">
