--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -17,8 +17,11 @@ ul,ol,li,b,h1,h2,h3,h4,h6,a,p{
     margin:0;
     display: block;
 }
-a:hover{
-    color: inherit;
+a{
+    color: unset;
+    &:hover{
+        color: unset;
+    }
 }
 
 //Background clickable shadows
