updated filter type selection input hiddens

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -89,9 +89,9 @@
             if(typeQuery != "fanfiction" && typeQuery != "plot"){
                 <div class="f-type_cont">
                     <input type="button" class="f-typebtns" value="Story +" data-type="story">
-                    <input type="hidden" name="chosentypes" value="story-0" data-typeref="story"/>
                     <input type="button" class="f-typebtns" value="Scenerio +" data-type="scenerio">
-                    <input type="hidden" name="chosentypes" value="scenerio-0" data-typeref="scenerio"/>
+                    <!--<input type="hidden" name="chosentypes" value="scenerio"/>
+                    <input type="hidden" name="chosentypes" value="story"/>-->
                 </div>
             }
             else if(typeQuery == "fanfiction"){
