added mainpage button to drawer and fixed an issue

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                 <i class="bi bi-x-lg"></i>
             </div>
         </div>
+        <div class="dw-mainpage">
+            <a asp-controller="Home" asp-action="Index">OmneFictio</a>
+        </div>
         <div class="dw-list">
             <ul>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile</a></li>
