--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -13,4 +13,5 @@ $frontbgcolor_hover3:#5e5e5e;
 $frontbgcolor_hover4:#3b3b3b;
 
 $textcolor_boxshadow:#ffffff50;
+$textcolor_boxshadow2:#ffffff70;
 $frontbgcolor_boxshadow:#31313150;
