--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -11,9 +11,13 @@
     <div class="linkgroup_cont readingtime">
         <span>Reading Time</span>
         <div class="linkgroup">
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="original">
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="story">
+                <i class="bi bi-book-fill"></i>
+                <span>Story</span>
+            </a>
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="scenario">
                 <i class="bi bi-book-half"></i>
-                <span>Original</span>
+                <span>Scenario</span>
             </a>
             <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="fanfiction">
                 <i class="bi bi-book"></i>
@@ -44,6 +48,10 @@
     </div>
     <div class="linkgroup_cont misclinks">
         <div class="linkgroup">
+            <div class="link_cont">
+                <i class="bi bi-cart"></i>
+                <span>Shop</span>
+            </div>
             <div class="link_cont">
                 <i class="bi bi-sliders2"></i>
                 <span>Customize</span>
