--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -52,7 +52,6 @@ main{
         margin-bottom: 12px;
         background-color: $frontbgcolor;
         overflow: hidden;
-        max-height: 260px;
         &:last-child{
             margin-bottom: unset;
         }
@@ -98,9 +97,13 @@ main{
         font-size: 0.9rem;
         font-family: 'Gudea', sans-serif;
         margin-bottom: 10px;
+        max-height: 260px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 7;
+        -webkit-box-orient: vertical;
         /*
-        text-overflow: ellipsis;
-        overflow: hidden;*/
+        text-overflow: ellipsis;*/
     }
     .p-footer{
         //color: $textcolor;
@@ -164,13 +167,22 @@ main{
             font-family: 'Gudea', sans-serif;
         }
         .pd-tags{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 6px;
             font-size: 0.7rem;
             font-family: 'Gudea', sans-serif;
             margin-bottom: 8px;
             padding: 0 4px;
-            span{
-                margin-right: 6px;
-            }
+        }
+        .pd-series{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            font-size: 0.9rem;
+            font-family: 'Itim', cursive;
+            margin-bottom: 8px;
+            padding: 0 4px;
         }
         .pd-type{
             margin-bottom: 8px;
@@ -227,16 +239,45 @@ main{
     display: none;
     flex-direction: column;
     width: 200px;
-    margin:20px 20px 0 0;
+    margin: 20px 20px 0 0;
     flex-shrink: 0;
-    .navcont-temp{
+    font-family: 'Itim', cursive;
+    .navcont-links{
         display: flex;
+        flex-direction: column;
         background-color: $sitebgcolor !important;
         border-radius: 10px;
         padding: 8px;
         width: 100%;
-        height: 140px;
+        min-height: 140px;
         margin-bottom: 12px;
+        .navlinks{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 10px;
+            padding: 6px;
+            > a{
+                padding: 4px 14px;
+                border-radius: 8px;
+                border: none;
+                outline: none;
+                transition: 0.2s ease;
+                cursor: pointer;
+            }
+        }
+        .nl-readingtime > a{
+            background-color: #a24c4c;
+            &:hover{
+                background-color: #983636;
+            }
+        }
+        .nl-aboutyou > a{
+            background-color: rgb(186, 160, 42);
+            &:hover{
+                background-color: rgb(196 134 26);
+            }
+        }
     }
     .nav-ad1{
         background-color: rgb(139, 136, 199);
@@ -785,6 +826,10 @@ main{
     }
     .f-removetagbtn:before {
         background-color: #c08e8e !important;
+    }
+    //position absolutes
+    .orderby_type-cont, .filter-cont, .filter-tagdd, .filter-addseries{
+        top:0;
     }
 }
 
