--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -252,13 +252,12 @@ header{
     align-items: center;
     > i{
         color: $textcolor;
-        font-size:2.4rem;
-        margin-right:16px;
-        text-shadow: 0px 0px 6px $textcolor_boxshadow;
+        font-size: 2.4rem;
+        margin-right: 16px;
         cursor: pointer;
         transition: 0.3s ease;
         &:hover {
-            color: $textcolor_hover1;
+            text-shadow: 0px 0px 6px $textcolor_boxshadow2;
         }
     }
     > i:last-child{
